# aurora-data-loader

./: .gitignore  pyproject.toml  requirements.txt
notebooks/: get_batch.ipynb
scripts/: download_data.py
src/: dataloader.py  dataset.py  normalisation.py  variable_mapper.py
src/dataloader/: batch.py  dataloader.py  dataset.py  download_data.py
src/model/: area.py  aurora.py  decoder.py  encoder.py  fourier.py  levelcond.py  patchembed.py  perceiver.py  posencoding.py  util.py
src/tests/: test1.py
