# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora-data-loader"
version = "0.1.0"
description = "DataLoader for Aurora weather model data"
authors = [
    {name = "Shamil", email = "shamil@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "xarray>=2023.12.0",
    "zarr>=2.16.0", 
    "gcsfs>=2023.12.0",
    "fsspec>=2023.10.0",
    "numpy>=1.24.0",
    "netcdf4>=1.6.0",
    "torch>=2.0.0",
    "scipy>=1.10.0",
]

[project.urls]
repository = "https://github.com/GitShamil/aurora-data-loader"

[tool.setuptools]
packages = ["src"]